@@ -8,7 +8,6 @@ import static org.folio.rest.util.Constants.OPERATOR_EQUALS;
 import static org.folio.rest.util.Constants.TABLE_NAME_COUNTER_REPORTS;
 import static org.folio.rest.util.Constants.TABLE_NAME_UDP;
 
-import io.vertx.core.CompositeFuture;
 import io.vertx.core.Context;
 import io.vertx.core.Future;
 import io.vertx.core.Promise;
@@ -165,7 +164,7 @@ public class PgHelper {
             providerId,
             reportName,
             release,
-            counterReports.stream().map(CounterReport::getYearMonth).collect(Collectors.toList()));
+            counterReports.stream().map(CounterReport::getYearMonth).toList());
 
     return existingReports.compose(
         existingList -> {
@@ -176,13 +175,12 @@ public class PgHelper {
                         .map(CounterReport::getYearMonth)
                         .collect(Collectors.joining(", ")));
           } else {
-            @SuppressWarnings({"rawtypes", "squid:S3740"})
-            List<Future> saveFutures = new ArrayList<>();
+            List<Future<String>> saveFutures = new ArrayList<>();
             counterReports.forEach(
                 cr -> saveFutures.add(saveCounterReportToDb(vertxContext, okapiHeaders, cr, true)));
 
-            return CompositeFuture.join(saveFutures)
-                .map(cf -> cf.list().stream().map(o -> (String) o).collect(Collectors.toList()));
+            return Future.join(saveFutures)
+                .map(cf -> cf.list().stream().map(o -> (String) o).toList());
           }
         });
   }
@@ -269,7 +267,7 @@ public class PgHelper {
                 List<String> collect =
                     StreamSupport.stream(updateResultAsyncResult.result().spliterator(), false)
                         .map(row -> Optional.ofNullable(row.getString(0)).orElse("other"))
-                        .collect(Collectors.toList());
+                        .toList();
                 ErrorCodes errorCodes = new ErrorCodes().withErrorCodes(collect);
                 result.complete(errorCodes);
               } else {
@@ -292,7 +290,7 @@ public class PgHelper {
                     StreamSupport.stream(ar.result().spliterator(), false)
                         .map(row -> row.getString(0))
                         .filter(Objects::nonNull)
-                        .collect(Collectors.toList());
+                        .toList();
                 ReportTypes reportTypes = new ReportTypes().withReportTypes(collect);
                 result.complete(reportTypes);
               } else {
